k8s/base/client-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: client-service
  namespace: three-tier-app
  labels:
    app: client
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: client
