k8s/base/server-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: server-service
  namespace: three-tier-app
  labels:
    app: server
spec:
  type: ClusterIP
  ports:
    - port: 5000
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: server
